--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Dit is mijn eerste online webpagina</h1>
-<p>NIGGER</p>
+<p>NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER</p>
 </body>
 </html>
