--- a/index.html
+++ b/index.html
@@ -2,11 +2,227 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>demo online</title>
+    <meta name="viewport" content="width=device-width">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+    <!-- remixicon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <!-- css -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Christmas Website</title>
+
 </head>
 <body>
-    <h1>Dit is mijn eerste online webpagina</h1>
-<p>NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER NIGGER</p>
+<header class="header" id="header">
+    <nav class="nav container">
+        <a href="#" class="nav_logo">
+            <img src="assets/img/logo.png" alt="logo image">
+            Christmas
+        </a>
+
+        <div class="nav_menu" id="nav-menu">
+            <ul class="nav_list">
+                <li class="nav_item">
+                    <a href="#home" class="nav_link active-link">Home</a>
+                </li>
+
+                <li class="nav_item">
+                    <a href="#about" class="nav_link">About</a>
+                </li>
+
+                <li class="nav_item">
+                    <a href="#send" class="nav_link">Send</a>
+                </li>
+
+                <li class="nav_item">
+                    <a href="#celebrate" class="nav_link">Celebrate</a>
+                </li>
+            </ul>
+
+            <!-- close button -->
+            <div class="nav_close" id="nav-close">
+                <i class="ri-close-line"></i>
+            </div>
+
+            <img src="assets/img/snow-img.png" alt="nav image" class="nav_img-1">
+            <img src="assets/img/snow-img.png" alt="nav image" class="nav_img-2">
+        </div>
+
+        <!-- toggle button -->
+        <div class="nav_toggle" id="nav-toggle">
+            <i class="ri-apps-2-line"></i>
+        </div>
+    </nav>
+</header>
+
+<!-- main -->
+<main class="main">
+    <!-- home -->
+    <section class="home section" id="home">
+        <h1 class="home_title">Merry Christmas</h1>
+
+        <img src="assets/img/home-moon.png" alt="home image" class="home_moon parallax" data-rellax-speed="-15">
+        <img src="assets/img/home-trineo-santa.png" alt="home image" class="home_trineo parallax" data-rellax-speed="-2">
+        <img src="assets/img/home-mountain-3.png" alt="home image" class="home_mountain-3 parallax" data-rellax-speed="-8">
+        <img src="assets/img/home-mountain-2.png" alt="home image" class="home_mountain-2 parallax" data-rellax-speed="-8">
+        <img src="assets/img/home-pine-tree.png" alt="home image" class="home_pine parallax" data-rellax-speed="-10">
+        <img src="assets/img/home-village.png" alt="home image" class="home_village parallax" data-rellax-speed="-10">
+        <img src="assets/img/home-snow.png" alt="home image" class="home_snow parallax">
+        <img src="assets/img/home-mountain-1.png" alt="home image" class="home_mountain-1">
+    </section>
+
+    <!-- about -->
+    <section class="about section" id="about">
+        <div class="about_container container grid">
+            <div class="about_data">
+                <h2 class="section_title">
+                    About Sharing <br>
+                    Happiness
+                </h2>
+
+                <p class="about_description">
+                    Sharing These Holidays Is The Best Gift You Can Give,
+                    Give Or Share Your Love With The People You Love The Most
+                    And Celebrate With Great Happiness
+                </p>
+
+                <a href="#" class="button">
+                    Share Now
+                </a>
+            </div>
+
+            <img src="assets/img/about-christmas.png" alt="about image" class="about_img">
+
+            <img src="assets/img/snow-img.png" alt="about image" class="about_snow-1">
+            <img src="assets/img/snow-img.png" alt="about image" class="about_snow-2">
+        </div>
+    </section>
+
+    <!-- send -->
+    <section class="send section" id="send">
+        <h2 class="section_title">
+            Send Love This <br>
+            Christmas
+        </h2>
+
+        <div class="send_container container grid">
+            <div class="send_card">
+                <img src="assets/img/send-night.png" alt="send image" class="send_img">
+
+                <h3 class="send_title">Spend It With Family</h3>
+
+                <p class="send_description">
+                    Sharing With Family Is The Best Gift You Can Give
+                </p>
+            </div>
+
+            <div class="send_card">
+                <img src="assets/img/send-gifts.png" alt="send image" class="send_img">
+
+                <h3 class="send_title">Gifts Lots Of Love</h3>
+
+                <p class="send_description">
+                    Send A Gift And Lot Of Love To Those Most In Need
+                </p>
+            </div>
+
+            <div class="send_card">
+                <img src="assets/img/send-santa.png" alt="send image" class="send_img">
+
+                <h3 class="send_title">Share Good Wishes</h3>
+
+                <p class="send_description">
+                    Wish Good Messages To Loved Ones This Christmas
+                </p>
+            </div>
+
+            <img src="assets/img/snow-img.png" alt="send image" class="send_snow-1">
+            <img src="assets/img/snow-img.png" alt="send image" class="send_snow-2">
+            <img src="assets/img/snow-img.png" alt="send image" class="send_snow-3">
+        </div>
+    </section>
+
+    <!-- celebrate -->
+    <section class="celebrate section" id="celebrate">
+        <div class="celebrate_container container grid">
+            <div class="celebrate_data">
+                <h2 class="section_title">
+                    Celebrate this year<br>
+                    With lot of love
+                </h2>
+
+                <p class="celebrate_description">
+                    Sending you peace, love, and joy this holiday season.
+                    Spreading holiday love this festive season! Happy holidays from our family to yours.
+                    Wishing you the best this season and always!
+                </p>
+
+                <a href="#" class="button">
+                    Celebrate Now
+                </a>
+            </div>
+
+            <img src="assets/img/celebarte-church.png" alt="celebrate image" class="celebrate_img">
+
+            <img src="assets/img/snow-img.png" alt="celebrate image" class="celebrate_snow-1">
+            <img src="assets/img/snow-img.png" alt="celebrate image" class="celebrate_snow-2">
+        </div>
+    </section>
+
+</main>
+
+<!-- footer -->
+<footer class="footer">
+    <div class="footer_container container">
+        <a href="#" class="footer_logo">Christmas</a>
+
+        <ul class="footer_social">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" class="footer_social-link">
+                    <i class="ri-facebook-fill"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" class="footer_social-link">
+                    <i class="ri-instagram-fill"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://twitter.com/" target="_blank" class="footer_social-link">
+                    <i class="ri-twitter-fill"></i>
+                </a>
+            </li>
+
+        </ul>
+
+        <span class="footer_copy">
+                        &#169; Copyright shiyas. All rights reserved
+                    </span>
+
+        <img src="assets/img/snow-img.png" alt="footer image" class="footer_snow-1">
+        <img src="assets/img/snow-img.png" alt="footer image" class="footer_snow-2">
+    </div>
+</footer>
+
+<!-- scroll up -->
+<a href="#" class="scrollup" id="scroll-up">
+    <i class="ri-arrow-up-line"></i>
+</a>
+
+<!-- rellax js -->
+<script src="assets/js/rellax.min.js"></script>
+
+<!-- gsap -->
+<script src="assets/js/gsap.min.js"></script>
+
+<!-- scroll reveal -->
+<script src="assets/js/scrollreveal.min.js"></script>
+
+<!-- main js -->
+<script src="assets/js/main.js"></script>
 </body>
 </html>
