nieuwe website layout 4

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- remixicon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Christmas Website</title>
 
@@ -214,15 +214,15 @@
 </a>
 
 <!-- rellax js -->
-<script src="assets/js/rellax.min.js"></script>
+<script src="rellax.min.js"></script>
 
 <!-- gsap -->
-<script src="assets/js/gsap.min.js"></script>
+<script src="gsap.min.js"></script>
 
 <!-- scroll reveal -->
-<script src="assets/js/scrollreveal.min.js"></script>
+<script src="scrollreveal.min.js"></script>
 
 <!-- main js -->
-<script src="assets/js/main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
