texten aangepast en <a> toegevoegd

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <nav class="nav container">
         <a href="#" class="nav_logo">
             <img src="assets/img/logo.png" alt="logo image">
-            Christmas
+            Christmas with
+            ylio philtjens
         </a>
+        <a>alles hardop voorlezen!!!</a>
 
         <div class="nav_menu" id="nav-menu">
             <ul class="nav_list">
@@ -61,7 +63,7 @@
 <main class="main">
     <!-- home -->
     <section class="home section" id="home">
-        <h1 class="home_title">Merry Christmas</h1>
+        <h1 class="home_title">Merry Christmas mom and dad :)</h1>
 
         <img src="assets/img/home-moon.png" alt="home image" class="home_moon parallax" data-rellax-speed="-15">
         <img src="assets/img/home-trineo-santa.png" alt="home image" class="home_trineo parallax" data-rellax-speed="-2">
@@ -83,9 +85,9 @@
                 </h2>
 
                 <p class="about_description">
-                    Sharing These Holidays Is The Best Gift You Can Give,
-                    Give Or Share Your Love With The People You Love The Most
-                    And Celebrate With Great Happiness
+                    Sharing happines... ik kan hier zo veel voor verzinnen maar het
+                    belangrijkste is mijn grote sponsor Nathalie-NV en mijn privé
+                    taxi chauffeur Nielsonphilipinos-on-the-wheels-nv die dit doen om mij gelukkig te houden.
                 </p>
 
                 <a href="#" class="button">
@@ -114,7 +116,9 @@
                 <h3 class="send_title">Spend It With Family</h3>
 
                 <p class="send_description">
-                    Sharing With Family Is The Best Gift You Can Give
+                    We zitten hier nu allemaal gezellig in de zetel cadeautjes open te maken
+                    met een happie en een drankie iedereen helemaal gelukkig (vooral jij Melle ik zie het wel)
+                    mama en papa helemaal blij met de gelukkige kinders....
                 </p>
             </div>
 
@@ -124,7 +128,9 @@
                 <h3 class="send_title">Gifts Lots Of Love</h3>
 
                 <p class="send_description">
-                    Send A Gift And Lot Of Love To Those Most In Need
+                    Nu geven jullie mama en papa allemaal een dikke knuffel
+                    met veel liefde als je dit niet doet laat dit zien dat je niet om hun geeft (ylio hoeft dit niet te
+                     te doen want hij stak al zijn moeite al in deze website).
                 </p>
             </div>
 
@@ -134,7 +140,8 @@
                 <h3 class="send_title">Share Good Wishes</h3>
 
                 <p class="send_description">
-                    Wish Good Messages To Loved Ones This Christmas
+                    Nu mogen jullie allemaal een "good wish" aan mama en papa wensen
+                    (nogmaals YLIO hoeft dit NIET te doen hij verzon dit hele gebeuren).
                 </p>
             </div>
 
@@ -155,8 +162,9 @@
 
                 <p class="celebrate_description">
                     Sending you peace, love, and joy this holiday season.
-                    Spreading holiday love this festive season! Happy holidays from our family to yours.
+                    Spreading holiday love this festive season! Happy holidays from us to mommie and daddie.
                     Wishing you the best this season and always!
+                    (ps: the sponsor and taxi can stay pls i need it)
                 </p>
 
                 <a href="#" class="button">
